<resources>
    <string name="app_name">Infoeduka</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_login_username">Username</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_login">Login</string>
    <string name="title_activity_drawer">Main menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="activity_drawer_items_settings">Settings</string>
    <string name="activity_drawer_items_utils">Utils</string>
    <string name="activity_drawer_items_news">News</string>
    <string name="activity_drawer_items_exams">Exams</string>
    <string name="activity_drawer_items_materials">Materials</string>
    <string name="activity_drawer_items_schedule">Schedule</string>
    <string name="activity_drawer_items_points">Points</string>
    <string name="activity_drawer_items_attendance">Attendance</string>
    <string name="activity_drawer_items_library">Library</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_fragment_title">News</string>
    <string name="global_menu_filter">Filter</string>
    <string name="schedule_fragment_title">Schedule</string>
</resources>
