<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_drawer_items_news"
            android:icon="@drawable/ic_drawer_menu_news"
            android:title="@string/activity_drawer_items_news" />

        <item
            android:id="@+id/activity_drawer_items_exams"
            android:icon="@drawable/ic_drawer_menu_exams"
            android:title="@string/activity_drawer_items_exams" />

        <item
            android:id="@+id/activity_drawer_items_materials"
            android:icon="@drawable/ic_drawer_menu_materials"
            android:title="@string/activity_drawer_items_materials" />

        <item
            android:id="@+id/activity_drawer_items_schedule"
            android:icon="@drawable/ic_drawer_menu_schedule"
            android:title="@string/activity_drawer_items_schedule" />

        <item
            android:id="@+id/activity_drawer_items_points"
            android:icon="@drawable/ic_drawer_menu_points"
            android:title="@string/activity_drawer_items_points" />

        <item
            android:id="@+id/activity_drawer_items_attendance"
            android:icon="@drawable/ic_drawer_menu_attendance"
            android:title="@string/activity_drawer_items_attendance" />

        <item
            android:id="@+id/activity_drawer_items_library"
            android:icon="@drawable/ic_drawer_menu_library"
            android:title="@string/activity_drawer_items_library" />
    </group>

    <item android:title="@string/activity_drawer_items_utils">
        <menu>
            <item
                android:id="@+id/activity_drawer_items_settings"
                android:icon="@drawable/ic_drawer_menu_settings"
                android:title="@string/activity_drawer_items_settings" />
        </menu>
    </item>

</menu>
